--- a/src/theme.css
+++ b/src/theme.css
@@ -1,3 +1,12 @@
+/* Use css variable to define global style */
+body {
+  --bs-body-color: green;
+}
+
+/*
+ * Inspect the classnames from the page, then customize them.
+ * The most traditional and simple way
+ */
 .btn {
   font-size: 30px;
 }
